src/test/ui/issues/issue-43420-no-over-suggest.stderr
error[E0308]: mismatched types
  --> $DIR/issue-43420-no-over-suggest.rs:8:9
   |
LL |     foo(&a);
   |         ^^ expected slice, found struct `Vec`
   |
   = note: expected type `&[u16]`
              found type `&Vec<u8>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
